[gd_scene load_steps=14 format=3 uid="uid://o4aw5tebmocc"]

[ext_resource type="Script" uid="uid://b11qo83db6m0n" path="res://Units/Ship/ship.gd" id="1_k7qg1"]
[ext_resource type="Script" uid="uid://cbubym246v5qh" path="res://Units/Water_Navigator.gd" id="2_rl1jt"]
[ext_resource type="Texture2D" uid="uid://du2vstu2sbbd0" path="res://Units/Stealth_Plane/Recon_plane.png" id="3_a25wx"]
[ext_resource type="Texture2D" uid="uid://bm0mqagcxon5" path="res://Units/Ship/Battleship_selected.png" id="5_k7qg1"]
[ext_resource type="Texture2D" uid="uid://dkmuk1h74e4kh" path="res://Units/Ship/BattleShip.png" id="6_pf3e3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7sjif"]
resource_local_to_scene = true
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("6_pf3e3")

[sub_resource type="PlaneMesh" id="PlaneMesh_4bgh4"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_7sjif")
size = Vector2(0.02, 0.02)

[sub_resource type="Animation" id="Animation_3rm1t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_pf3e3")]
}

[sub_resource type="Animation" id="Animation_4bgh4"]
resource_name = "change_to_selected"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_k7qg1")]
}

[sub_resource type="Animation" id="Animation_s4u6o"]
resource_name = "change_to_unselected"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:mesh:material:albedo_texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_pf3e3")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0m7mj"]
_data = {
&"RESET": SubResource("Animation_3rm1t"),
&"change_to_selected": SubResource("Animation_4bgh4"),
&"change_to_unselected": SubResource("Animation_s4u6o")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_4bgh4"]
size = Vector3(0.025, 0.02, 0.025)

[sub_resource type="SphereShape3D" id="SphereShape3D_k7qg1"]
radius = 0.0247657

[node name="Ship" type="Node3D" groups=["Ship"]]
script = ExtResource("1_k7qg1")

[node name="Marker2D" type="Marker2D" parent="."]
gizmo_extents = 107.5
script = ExtResource("2_rl1jt")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Marker2D"]

[node name="Sprite2D" type="Sprite2D" parent="Marker2D"]
visible = false
position = Vector2(-0.0220003, -2.19345e-05)
scale = Vector2(0.204167, 0.208333)
texture = ExtResource("3_a25wx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)
layers = 2
mesh = SubResource("PlaneMesh_4bgh4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0m7mj")
}

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_4bgh4")

[node name="Area3D2" type="Area3D" parent="." groups=["Player_recon"]]
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
shape = SubResource("SphereShape3D_k7qg1")

[connection signal="input_event" from="Area3D" to="." method="_on_area_3d_input_event"]
[connection signal="area_entered" from="Area3D2" to="." method="_on_area_3d_2_area_entered"]
[connection signal="area_exited" from="Area3D2" to="." method="_on_area_3d_2_area_exited"]
